--- a/ASS_rank_output.ipynb
+++ b/ASS_rank_output.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,6 +42,13 @@
      "text": [
       "Growth rate: 3.20\n",
       "This is the flux of ARGSS in healthy cell optimizing for growth:   241.458508558\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cobra/io/mat.py:136 \u001b[1;31mFutureWarning\u001b[0m: elementwise == comparison failed and returning scalar instead; this will raise an error or perform elementwise comparison in the future.\n"
      ]
     }
    ],
@@ -54,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -84,6 +91,92 @@
     "print solution.x_dict['ARGSS']\n",
     "print p_solution.x_dict['ARGSS']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial lower bound:   -1.0\n",
+      "Initial upper bound:   1000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Initial lower bound:   \" + str(model.reactions[model.reactions.index('EX_arg_L(e)')].lower_bound)\n",
+    "print \"Initial upper bound:   \" + str(model.reactions[model.reactions.index('EX_arg_L(e)')].upper_bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New lower bound:   0\n",
+      "New lower bound:   0\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.reactions[model.reactions.index('EX_arg_L(e)')].lower_bound = 0\n",
+    "model.reactions[model.reactions.index('EX_arg_L(e)')].upper_bound = 0\n",
+    "print \"New lower bound:   \" + str(model.reactions[model.reactions.index('EX_arg_L(e)')].lower_bound)\n",
+    "print \"New lower bound:   \" + str(model.reactions[model.reactions.index('EX_arg_L(e)')].upper_bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "solution_0ex_arg = model.optimize()\n",
+    "p_solution_0ex_arg = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.9924745753\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print solution_0ex_arg.x_dict['ARGSS']\n",
+    "print p_solution_0ex_arg.x_dict['ARGSS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
