More Recon1 troubleshooting 0 growth

--- a/ASS_rank_output_v3.ipynb
+++ b/ASS_rank_output_v3.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cobra/io/__init__.py:17 \u001b[1;31mUserWarning\u001b[0m: cobra.io.sbml requires libsbml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import escher\n",
     "import escher.urls\n",
@@ -32,19 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cobra/io/mat.py:136 \u001b[1;31mFutureWarning\u001b[0m: elementwise == comparison failed and returning scalar instead; this will raise an error or perform elementwise comparison in the future.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = cobra.io.load_matlab_model('/Users/LAURENCE/Desktop/Senior Design/RECON1', 'RECON1')\n",
     "#print \"This is the flux of ARGSS in healthy cell optimizing for growth:   \" + str(solution.x_dict['ARGSS'])"
@@ -52,11 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['EX_Tyr_ggn_e', 'EX_peplys_e', 'EX_glc__D_e', 'EX_gln__L_e', 'EX_ser__L_e', 'EX_trp__L_e', 'EX_his__L_e', 'EX_met__L_e', 'EX_phe__L_e', 'EX_thr__L_e', 'EX_val__L_e', 'EX_ile__L_e', 'EX_leu__L_e', 'EX_lys__L_e', 'EX_o2_e', 'EX_h2o_e', 'EX_h_e', 'EX_k_e', 'EX_na_e']\n"
+     ]
+    }
+   ],
    "source": [
     "# Setting EX lower bounds to 0\n",
     "except_EX_names = '''EX_Tyr_ggn_e, EX_peplys_e, EX_glc__D_e, EX_gln__L_e, EX_ser__L_e, EX_trp__L_e, EX_his__L_e, EX_met__L_e, EX_phe__L_e, EX_thr__L_e, EX_val__L_e, EX_ile__L_e, EX_leu__L_e, EX_lys__L_e, EX_o2_e, EX_h2o_e, EX_h_e, EX_k_e, EX_na_e'''\n",
@@ -66,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -96,18 +88,18 @@
    "source": [
     "# Changing all lower bounds to 0 except the given reactions above\n",
     "\n",
-    "for a in range(len(model.reactions)):\n",
-    "    model.reactions[a].lower_bound = 0\n",
+    "for a in model.reactions[1188:1591]:\n",
+    "    a.lower_bound = 0\n",
     "\n",
-    "for b in range(len(model.reactions)):\n",
+    "for b in model.reactions[1188:1591]:\n",
     "    for c in range(len(except_EX_names_split)):  \n",
-    "        if model.reactions[b].id  == except_EX_names_split[c]:\n",
-    "            model.reactions[b].lower_bound = -999999.0"
+    "        if b.id  == except_EX_names_split[c]:\n",
+    "            b.lower_bound = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +155,7 @@
       "0\n",
       "0\n",
       "0\n",
-      "-999999.0\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
@@ -312,8 +304,8 @@
       "0\n",
       "0\n",
       "0\n",
-      "-999999.0\n",
-      "-999999.0\n",
+      "-1\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
@@ -335,8 +327,8 @@
       "0\n",
       "0\n",
       "0\n",
-      "-999999.0\n",
-      "-999999.0\n",
+      "-1\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
@@ -345,7 +337,7 @@
       "0\n",
       "0\n",
       "0\n",
-      "-999999.0\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
@@ -354,10 +346,11 @@
       "0\n",
       "0\n",
       "0\n",
-      "-999999.0\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
@@ -365,8 +358,8 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -375,16 +368,16 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -398,8 +391,8 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -413,11 +406,11 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -452,8 +445,8 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -479,8 +472,8 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -488,8 +481,8 @@
       "0\n",
       "0\n",
       "0\n",
+      "-1\n",
       "0\n",
-      "-999999.0\n",
       "0\n",
       "0\n",
       "0\n",
@@ -504,8 +497,7 @@
       "0\n",
       "0\n",
       "0\n",
-      "0\n",
-      "-999999.0\n",
+      "-1\n",
       "0\n",
       "0\n",
       "0\n",
@@ -529,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -538,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Growth rate: 0.00\n"
+      "Growth rate: -0.00\n"
      ]
     }
    ],
