algorithm troubleshooting...no flux thru ARGSS

--- a/ASS_rank_output_v6.ipynb
+++ b/ASS_rank_output_v6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -32,9 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -241,9 +241,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -269,9 +269,8 @@
     "# creates an empty dict to store DM_rxns as keys and the p_solution.f values\n",
     "normal_maxmet_dict = {}\n",
     "\n",
-    "#for i in length(model.metabolites):\n",
-    "for i in range(30):\n",
-    "    \n",
+    "for i in range(len(model.metabolites)):\n",
+    "\n",
     "    # this part creates a demand reaction for each metabolite\n",
     "    temp_DM = 'DM_' + str(newmet_array[i])\n",
     "    \n",
@@ -312,75 +311,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'DM_10fthf5glu_c': 0.0,\n",
-       " 'DM_10fthf5glu_l': 0.0,\n",
-       " 'DM_10fthf5glu_m': 0.0,\n",
-       " 'DM_10fthf6glu_c': 0.0,\n",
-       " 'DM_10fthf6glu_l': 0.0,\n",
-       " 'DM_10fthf6glu_m': 0.0,\n",
-       " 'DM_10fthf7glu_c': 0.0,\n",
-       " 'DM_10fthf7glu_l': 0.0,\n",
-       " 'DM_10fthf7glu_m': 0.0,\n",
-       " 'DM_10fthf_c': 0.0,\n",
-       " 'DM_10fthf_l': 0.0,\n",
-       " 'DM_10fthf_m': 0.0,\n",
-       " 'DM_11docrtsl_c': 0.0,\n",
-       " 'DM_11docrtsl_m': 0.0,\n",
-       " 'DM_11docrtsl_r': 0.0,\n",
-       " 'DM_11docrtstrn_c': 0.0,\n",
-       " 'DM_11docrtstrn_m': 0.0,\n",
-       " 'DM_11docrtstrn_r': 0.0,\n",
-       " 'DM_13dampp_c': 0.6666666666666666,\n",
-       " 'DM_1mncam_c': 0.33333333333333337,\n",
-       " 'DM_1mncam_e': 0.3333333333333333,\n",
-       " 'DM_adp_c': 0.49999999999999867,\n",
-       " 'DM_atp_c': 0.33333333333333437,\n",
-       " 'DM_bamppald_c': 0.5,\n",
-       " 'DM_h2o2_c': 1.0,\n",
-       " 'DM_h2o_c': 1000.0,\n",
-       " 'DM_h_c': 1000.0,\n",
-       " 'DM_nh4_c': 1000.0,\n",
-       " 'DM_o2_c': 1.0,\n",
-       " 'DM_pi_c': 1.0}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "normal_maxmet_dict"
+    "# writing normal_maxmet_dict as a .csv file\n",
+    "\n",
+    "key_normal_maxmet = [0] * 2766\n",
+    "value_normal_maxmet = [0] * 2766\n",
+    "key_normal_maxmet_count = 0\n",
+    "value_normal_maxmet_count = 0\n",
+    "\n",
+    "value_normal_maxmet_count = 0\n",
+    "for key, value in normal_maxmet_dict.iteritems():\n",
+    "    key_normal_maxmet[key_normal_maxmet_count] = key\n",
+    "    key_normal_maxmet_count = key_normal_maxmet_count + 1\n",
+    "    \n",
+    "for key, value in normal_maxmet_dict.iteritems():\n",
+    "    value_normal_maxmet[value_normal_maxmet_count] = value\n",
+    "    value_normal_maxmet_count = value_normal_maxmet_count + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.reactions[model.reactions.index('EX_h2o2_e')].lower_bound"
+    "# this saves the array into a .csv file as named\n",
+    "\n",
+    "import csv\n",
+    "from itertools import izip\n",
+    "\n",
+    "with open('normal_maxmet_flux.csv', 'wb') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(izip(key_normal_maxmet, value_normal_maxmet))"
    ]
   },
   {
@@ -392,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -404,44 +373,128 @@
     "model.reactions.get_by_id(\"ARGSS\").lower_bound = 0\n",
     "\n",
     "# set external arginine uptake back to original state given by model\n",
-    "model.reactions[model.reactions.index('EX_arg__L_e')].lower_bound = -1\n",
+    "model.reactions[model.reactions.index('EX_arg__L_e')].lower_bound = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# creates an empty dict to store DM_rxns as keys and the p_solution.f values\n",
+    "ARGSSKO_maxmet_dict = {}\n",
     "\n",
-    "# set objective back to growth\n",
-    "my_objective = model.reactions.get_by_id('biomass_NCI60')"
+    "for i in range(len(model.metabolites)):\n",
+    "    \n",
+    "    # this part creates a demand reaction for each metabolite\n",
+    "    temp_DM = 'DM_' + str(newmet_array[i])\n",
+    "    \n",
+    "    # this nested for loop tries to catch if a demand reaction already exists in the model\n",
+    "    for ii in model.reactions:\n",
+    "        if temp_DM == str(ii):\n",
+    "            # this part sets the newly created demand as the objective\n",
+    "            my_objective = model.reactions.get_by_id(str(temp_DM))\n",
+    "            model.change_objective(my_objective)\n",
+    "\n",
+    "            # this part runs pFBA on the new demand\n",
+    "            p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
+    "\n",
+    "            # this stores the demand flux into a dictionary where its demand rxn is the key\n",
+    "            ARGSSKO_maxmet_dict[str(temp_DM)] = p_solution.f\n",
+    "\n",
+    "            # this deletes the demand at the end of each iteration\n",
+    "            model.reactions.get_by_id(str(temp_DM)).delete()\n",
+    "            \n",
+    "    temp_DM = Reaction(str(temp_DM))\n",
+    "    newmet_array[i] = model.metabolites.get_by_id(model.metabolites[i].id)\n",
+    "    temp_DM.add_metabolites({newmet_array[i]: -1})\n",
+    "    model.add_reaction(temp_DM)\n",
+    "    \n",
+    "    # this part sets the newly created demand as the objective\n",
+    "    my_objective = model.reactions.get_by_id(str(temp_DM))\n",
+    "    model.change_objective(my_objective)\n",
+    "    \n",
+    "    # this part runs pFBA on the new demand\n",
+    "    p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
+    "    \n",
+    "    # this stores the demand flux into a dictionary where its demand rxn is the key\n",
+    "    ARGSSKO_maxmet_dict[str(temp_DM)] = p_solution.f\n",
+    "    \n",
+    "    # this deletes the demand at the end of each iteration\n",
+    "    model.reactions.get_by_id(str(temp_DM)).delete()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# writing ARGSSKO_maxmet_dict as a .csv file\n",
+    "\n",
+    "key_ARGSSKO_maxmet = [0] * 2766\n",
+    "value_ARGSSKO_maxmet = [0] * 2766\n",
+    "key_ARGSSKO_maxmet_count = 0\n",
+    "value_ARGSSKO_maxmet_count = 0\n",
+    "\n",
+    "for key, value in ARGSSKO_maxmet_dict.iteritems():\n",
+    "    key_ARGSSKO_maxmet[key_ARGSSKO_maxmet_count] = key\n",
+    "    key_ARGSSKO_maxmet_count = key_ARGSSKO_maxmet_count + 1\n",
+    "    \n",
+    "for key, value in ARGSSKO_maxmet_dict.iteritems():\n",
+    "    value_ARGSSKO_maxmet[value_ARGSSKO_maxmet_count] = value\n",
+    "    value_ARGSSKO_maxmet_count = value_ARGSSKO_maxmet_count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# this saves the array into a .csv file as named\n",
+    "\n",
+    "import csv\n",
+    "from itertools import izip\n",
+    "\n",
+    "with open('ARGSSKO_maxmet_flux.csv', 'wb') as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(izip(key_ARGSSKO_maxmet, value_ARGSSKO_maxmet))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
-    "ARGSSKO_biomass_growth = p_solution.f\n",
-    "ARGSSKO_biomass_ADK1 = p_solution.x_dict['ADK1']\n",
-    "print('Growth rate of ARGSS KO optimized for growth: %.2f' % p_solution.f)\n",
-    "print \"This is the flux of ADK1 in ARGSS KO optimizing for growth:   \" + str(p_solution.x_dict['ADK1'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# set objective to ADK1 (NTP Synthesis)\n",
-    "my_objective = model.reactions.get_by_id('ADK1')\n",
-    "p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
-    "ARGSSKO_ADK1_growth = p_solution.f\n",
-    "ARGSSKO_ADK1_ADK1 = p_solution.x_dict['ADK1']\n",
-    "KO_fluxes = p_solution.x_dict\n",
-    "print('Growth rate of ARGSS KO optimized for ADK1 (NTP Synthesis): %.2f' % p_solution.f)\n",
-    "print \"This is the flux of ADK1 in ARGSS KO optimizing for ADK1 (NTP Synthesis):   \" + str(p_solution.x_dict['ADK1'])"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
