April 18 updates and troubleshooting

--- a/ASS_rank_output_v6.ipynb
+++ b/ASS_rank_output_v6.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cobra/io/__init__.py:17 \u001b[1;31mUserWarning\u001b[0m: cobra.io.sbml requires libsbml\n",
-      "cobra/io/mat.py:136 \u001b[1;31mFutureWarning\u001b[0m: elementwise == comparison failed and returning scalar instead; this will raise an error or perform elementwise comparison in the future.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cobra import Reaction\n",
     "import escher\n",
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -216,20 +207,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Actively choosing not to force ARGSS"
+    "### Constraining ARGSS flux from version 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# setting arginine uptake to 0\n",
+    "# We want ARGSS to be bound\n",
+    "# ARGSS flux at 0.4862\n",
     "\n",
-    "#model.reactions[model.reactions.index('EX_arg__L_e')].lower_bound = 0"
+    "model.reactions.get_by_id(\"ARGSS\").upper_bound = 0.486198921177\n",
+    "model.reactions.get_by_id(\"ARGSS\").lower_bound = 0.486198921177"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.486198921177\n",
+      "0.486198921177\n"
+     ]
+    }
+   ],
+   "source": [
+    "print model.reactions.get_by_id(\"ARGSS\").upper_bound\n",
+    "print model.reactions.get_by_id(\"ARGSS\").lower_bound"
    ]
   },
   {
@@ -241,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -336,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -378,7 +392,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# working copy!\n",
+    "# This creates an array of modified met names since I'm getting errors accessing model.metabolites[i].id in some of the code\n",
+    "\n",
+    "\n",
+    "newmet_array = [0] * len(model.metabolites)\n",
+    "met_count = 0\n",
+    "for i in range(len(model.metabolites)):\n",
+    "    newmet_array[met_count] = string.replace(model.metabolites[i].id, \" \", \"_\")\n",
+    "    met_count = met_count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -453,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
