May 24 FH case troubleshooting

--- a/FH_model_troubleshoot_v01.ipynb
+++ b/FH_model_troubleshoot_v01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -11,26 +11,16 @@
     "# Changes:\n",
     "# nh4 is now also -1000, and changed glucose to -100\n",
     "# Set \"MMMm\" and \"OCOAT1m\" rxn bounds to 0\n",
-    "# Also, make sure EX_pi_e is also -1000, not sure if it is or not, but it shouldn't be limiting.\n",
-    "# Added a malate sink"
+    "# Also, make sure EX_pi_e is also -1000, not sure if it is or not, but it shouldn't be limiting."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "cobra/io/__init__.py:17 \u001b[1;31mUserWarning\u001b[0m: cobra.io.sbml requires libsbml\n",
-      "cobra/io/mat.py:136 \u001b[1;31mFutureWarning\u001b[0m: elementwise == comparison failed and returning scalar instead; this will raise an error or perform elementwise comparison in the future.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from cobra import Reaction\n",
     "import escher\n",
@@ -47,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -286,7 +276,7 @@
        "1.500440309718469"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -339,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +340,7 @@
        "3745"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -381,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -393,11 +383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.50044030972\n",
+      "1.50044030972\n"
+     ]
+    }
+   ],
    "source": [
     "print model.reactions.get_by_id(\"FUM\").upper_bound\n",
     "print model.reactions.get_by_id(\"FUM\").lower_bound"
@@ -407,120 +406,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## For loop through each metabolite"
+    "## Create and set  5aop_m  flux thing as objective"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# working copy!\n",
-    "# This creates an array of modified met names since I'm getting errors accessing model.metabolites[i].id in some of the code\n",
-    "\n",
-    "\n",
-    "newmet_array = [0] * len(model.metabolites)\n",
-    "met_count = 0\n",
-    "for i in range(len(model.metabolites)):\n",
-    "    newmet_array[met_count] = string.replace(model.metabolites[i].id, \" \", \"_\")\n",
-    "    met_count = met_count + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# creates an empty dict to store DM_rxns as keys and the p_solution.f values\n",
-    "normal_maxmet_dict = {}\n",
-    "\n",
-    "for i in range(len(model.metabolites)):\n",
-    "\n",
-    "    # this part creates a demand reaction for each metabolite\n",
-    "    temp_DM = 'DM_' + str(newmet_array[i])\n",
-    "    \n",
-    "    # this nested for loop tries to catch if a demand reaction already exists in the model\n",
-    "    for ii in model.reactions:\n",
-    "        if temp_DM == str(ii):\n",
-    "            # this part sets the newly created demand as the objective\n",
-    "            my_objective = model.reactions.get_by_id(str(temp_DM))\n",
-    "            model.change_objective(my_objective)\n",
-    "\n",
-    "            # this part runs pFBA on the new demand\n",
-    "            p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
-    "\n",
-    "            # this stores the demand flux into a dictionary where its demand rxn is the key\n",
-    "            normal_maxmet_dict[str(temp_DM)] = p_solution.f\n",
-    "\n",
-    "            # this deletes the demand at the end of each iteration\n",
-    "            model.reactions.get_by_id(str(temp_DM)).delete()\n",
-    "            \n",
-    "    temp_DM = Reaction(str(temp_DM))\n",
-    "    newmet_array[i] = model.metabolites.get_by_id(model.metabolites[i].id)\n",
-    "    temp_DM.add_metabolites({newmet_array[i]: -1})\n",
-    "    model.add_reaction(temp_DM)\n",
-    "    \n",
-    "    # this part sets the newly created demand as the objective\n",
-    "    my_objective = model.reactions.get_by_id(str(temp_DM))\n",
-    "    model.change_objective(my_objective)\n",
-    "    \n",
-    "    # this part runs pFBA on the new demand\n",
-    "    p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
-    "    \n",
-    "    # this stores the demand flux into a dictionary where its demand rxn is the key\n",
-    "    normal_maxmet_dict[str(temp_DM)] = p_solution.f\n",
-    "    \n",
-    "    # this deletes the demand at the end of each iteration\n",
-    "    model.reactions.get_by_id(str(temp_DM)).delete()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# writing normal_maxmet_dict as a .csv file\n",
-    "\n",
-    "key_normal_maxmet = [0] * 2766\n",
-    "value_normal_maxmet = [0] * 2766\n",
-    "key_normal_maxmet_count = 0\n",
-    "value_normal_maxmet_count = 0\n",
-    "\n",
-    "value_normal_maxmet_count = 0\n",
-    "for key, value in normal_maxmet_dict.iteritems():\n",
-    "    key_normal_maxmet[key_normal_maxmet_count] = key\n",
-    "    key_normal_maxmet_count = key_normal_maxmet_count + 1\n",
-    "    \n",
-    "for key, value in normal_maxmet_dict.iteritems():\n",
-    "    value_normal_maxmet[value_normal_maxmet_count] = value\n",
-    "    value_normal_maxmet_count = value_normal_maxmet_count + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# this saves the array into a .csv file as named\n",
+    "fiveaop_m = model.metabolites.get_by_id('5aop_m')\n",
+    "fiveaop_m_sink = Reaction('fiveaop_m_sink')\n",
+    "fiveaop_m_sink.name = fiveaop_m_sink\n",
+    "fiveaop_m_sink.add_metabolites({fiveaop_m: -1})\n",
+    "model.add_reaction(fiveaop_m_sink)\n",
     "\n",
-    "import csv\n",
-    "from itertools import izip\n",
-    "\n",
-    "with open('FH_normal_maxmet_flux.csv', 'wb') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows(izip(key_normal_maxmet, value_normal_maxmet))"
+    "my_objective = model.reactions.get_by_id('fiveaop_m_sink')\n",
+    "model.change_objective(my_objective)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## pFBA with 5aop and malate sink"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)"
    ]
   },
   {
@@ -532,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -546,133 +468,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# working copy!\n",
-    "# This creates an array of modified met names since I'm getting errors accessing model.metabolites[i].id in some of the code\n",
-    "\n",
-    "\n",
-    "newmet_array = [0] * len(model.metabolites)\n",
-    "met_count = 0\n",
-    "for i in range(len(model.metabolites)):\n",
-    "    newmet_array[met_count] = string.replace(model.metabolites[i].id, \" \", \"_\")\n",
-    "    met_count = met_count + 1"
+    "# Now calculate the pFBA\n",
+    "p_solution_FHKO = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# creates an empty dict to store DM_rxns as keys and the p_solution.f values\n",
-    "ARGSSKO_maxmet_dict = {}\n",
-    "\n",
-    "for i in range(len(model.metabolites)):\n",
-    "    \n",
-    "    # this part creates a demand reaction for each metabolite\n",
-    "    temp_DM = 'DM_' + str(newmet_array[i])\n",
-    "    \n",
-    "    # this nested for loop tries to catch if a demand reaction already exists in the model\n",
-    "    for ii in model.reactions:\n",
-    "        if temp_DM == str(ii):\n",
-    "            # this part sets the newly created demand as the objective\n",
-    "            my_objective = model.reactions.get_by_id(str(temp_DM))\n",
-    "            model.change_objective(my_objective)\n",
-    "\n",
-    "            # this part runs pFBA on the new demand\n",
-    "            p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
-    "\n",
-    "            # this stores the demand flux into a dictionary where its demand rxn is the key\n",
-    "            ARGSSKO_maxmet_dict[str(temp_DM)] = p_solution.f\n",
-    "\n",
-    "            # this deletes the demand at the end of each iteration\n",
-    "            model.reactions.get_by_id(str(temp_DM)).delete()\n",
-    "            \n",
-    "    temp_DM = Reaction(str(temp_DM))\n",
-    "    newmet_array[i] = model.metabolites.get_by_id(model.metabolites[i].id)\n",
-    "    temp_DM.add_metabolites({newmet_array[i]: -1})\n",
-    "    model.add_reaction(temp_DM)\n",
-    "    \n",
-    "    # this part sets the newly created demand as the objective\n",
-    "    my_objective = model.reactions.get_by_id(str(temp_DM))\n",
-    "    model.change_objective(my_objective)\n",
-    "    \n",
-    "    # this part runs pFBA on the new demand\n",
-    "    p_solution = cobra.flux_analysis.parsimonious.optimize_minimal_flux(model)\n",
-    "    \n",
-    "    # this stores the demand flux into a dictionary where its demand rxn is the key\n",
-    "    ARGSSKO_maxmet_dict[str(temp_DM)] = p_solution.f\n",
-    "    \n",
-    "    # this deletes the demand at the end of each iteration\n",
-    "    model.reactions.get_by_id(str(temp_DM)).delete()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# writing ARGSSKO_maxmet_dict as a .csv file\n",
-    "\n",
-    "key_ARGSSKO_maxmet = [0] * 2766\n",
-    "value_ARGSSKO_maxmet = [0] * 2766\n",
-    "key_ARGSSKO_maxmet_count = 0\n",
-    "value_ARGSSKO_maxmet_count = 0\n",
-    "\n",
-    "for key, value in ARGSSKO_maxmet_dict.iteritems():\n",
-    "    key_ARGSSKO_maxmet[key_ARGSSKO_maxmet_count] = key\n",
-    "    key_ARGSSKO_maxmet_count = key_ARGSSKO_maxmet_count + 1\n",
-    "    \n",
-    "for key, value in ARGSSKO_maxmet_dict.iteritems():\n",
-    "    value_ARGSSKO_maxmet[value_ARGSSKO_maxmet_count] = value\n",
-    "    value_ARGSSKO_maxmet_count = value_ARGSSKO_maxmet_count + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# this saves the array into a .csv file as named\n",
-    "\n",
-    "import csv\n",
-    "from itertools import izip\n",
-    "\n",
-    "with open('FHKO_maxmet_flux.csv', 'wb') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerows(izip(key_ARGSSKO_maxmet, value_ARGSSKO_maxmet))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
