June 8 troubleshooting -- TCA cycle_v2

--- a/FH_model_troubleshoot_systematic_v03.ipynb
+++ b/FH_model_troubleshoot_systematic_v03.ipynb
@@ -445,11 +445,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'# objective troubleshoot\\n\\ncoeff_array = [0]*len(model.reactions)\\ncounter = 0\\nfor i in model.reactions:\\n    coeff_array[counter] = model.reactions.get_by_id(str(i)).objective_coefficient\\n    counter = counter + 1\\n    '"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''# objective troubleshoot\n",
     "\n",
@@ -463,11 +474,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"# objective troubleshoot\\n\\nimport csv\\nfrom itertools import izip\\n\\nwith open('objective_coeff.csv', 'wb') as f:\\n    writer = csv.writer(f)\\n    writer.writerows(izip(model.reactions, coeff_array))\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''# objective troubleshoot\n",
     "\n",
@@ -481,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -492,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -503,7 +525,7 @@
        "1000.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,22 +536,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p_solution.x_dict['DM_atp_c']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.reactions.get_by_id('FUMm')\n",
     "p_solution.x_dict['FUMm']"
