--- a/Algorithm_Nb_v04_ARGSS.ipynb
+++ b/Algorithm_Nb_v04_ARGSS.ipynb
@@ -422,31 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Reactions already in the model: DM_atp_c",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-d2bdbfe4e6f7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mnewmet_array\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetabolites\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_by_id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetabolites\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mtemp_DM\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_metabolites\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mnewmet_array\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_reaction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_DM\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;31m# this part sets the newly created demand as the objective\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/cobra/core/Model.pyc\u001b[0m in \u001b[0;36madd_reaction\u001b[0;34m(self, reaction)\u001b[0m\n\u001b[1;32m    172\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m         \"\"\"\n\u001b[0;32m--> 174\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_reactions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mreaction\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0madd_reactions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreaction_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m//anaconda/lib/python2.7/site-packages/cobra/core/Model.pyc\u001b[0m in \u001b[0;36madd_reactions\u001b[0;34m(self, reaction_list)\u001b[0m\n\u001b[1;32m    196\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreactions_in_model\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    197\u001b[0m             raise Exception(\"Reactions already in the model: \" +\n\u001b[0;32m--> 198\u001b[0;31m                             \", \".join(reactions_in_model))\n\u001b[0m\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    200\u001b[0m         \u001b[0;31m# Add reactions. Also take care of genes and metabolites in the loop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Reactions already in the model: DM_atp_c"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# creates an empty dict to store DM_rxns as keys and the p_solution.f values\n",
     "normal_maxmet_dict = {}\n",
     "\n",
     "for i in range(len(model.metabolites)):\n",
     "#for i in range(80):\n",
+    "\n",
+    "    #  switch toggle\n",
+    "    switch = True\n",
     "\n",
     "    # this part creates a demand reaction for each metabolite\n",
     "    temp_DM = 'DM_' + str(newmet_array[i])\n",
@@ -464,23 +453,27 @@
     "            # this stores the demand flux into a dictionary where its demand rxn is the key\n",
     "            normal_maxmet_dict[str(temp_DM)] = p_solution.f\n",
     "            \n",
-    "    temp_DM = Reaction(str(temp_DM))\n",
-    "    newmet_array[i] = model.metabolites.get_by_id(model.metabolites[i].id)\n",
-    "    temp_DM.add_metabolites({newmet_array[i]: -1})\n",
-    "    model.add_reaction(temp_DM)\n",
-    "    \n",
-    "    # this part sets the newly created demand as the objective\n",
-    "    my_objective = model.reactions.get_by_id(str(temp_DM))\n",
-    "    model.change_objective(my_objective)\n",
-    "    \n",
-    "    # this part runs FBA on the new demand\n",
-    "    p_solution = model.optimize()\n",
-    "    \n",
-    "    # this stores the demand flux into a dictionary where its demand rxn is the key\n",
-    "    normal_maxmet_dict[str(temp_DM)] = p_solution.f\n",
-    "    \n",
-    "    # this deletes the demand at the end of each iteration\n",
-    "    model.reactions.get_by_id(str(temp_DM)).delete()"
+    "            # a toggle to see if the reaction is to be deleted or not\n",
+    "            switch = False\n",
+    "            \n",
+    "    if switch is True:\n",
+    "        temp_DM = Reaction(str(temp_DM))\n",
+    "        newmet_array[i] = model.metabolites.get_by_id(model.metabolites[i].id)\n",
+    "        temp_DM.add_metabolites({newmet_array[i]: -1})\n",
+    "        model.add_reaction(temp_DM)\n",
+    "\n",
+    "        # this part sets the newly created demand as the objective\n",
+    "        my_objective = model.reactions.get_by_id(str(temp_DM))\n",
+    "        model.change_objective(my_objective)\n",
+    "\n",
+    "        # this part runs FBA on the new demand\n",
+    "        p_solution = model.optimize()\n",
+    "\n",
+    "        # this stores the demand flux into a dictionary where its demand rxn is the key\n",
+    "        normal_maxmet_dict[str(temp_DM)] = p_solution.f\n",
+    "\n",
+    "        # this deletes the demand at the end of each iteration\n",
+    "        model.reactions.get_by_id(str(temp_DM)).delete()"
    ]
   },
   {
